[package]
name = "thue"
version = "0.1.0"
authors = ["satake <satake.syukatsu@gmail.com>"]
license = "MIT"
description = "Translate english day of week to japanese one"
homepage = "https://www.satake.tech/"
repository = "https://github.com/satake0916/thue"
keywords = ["cli", "translate", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = {verstion = "4.4.8", features = ["derive"]}
